2238 [AviSynth Script Creator] enabled upsizing

Changelog 2153 --> 2237

Features/Changes:
- enhanced OneClick tool (read details in the block below)
- AviSynth is not required to be installed anymore. Instead a portable version will be used when required.
- The audio encoder QAAC and OPUS have been added - FAAC has been removed.
  Because of the external dependencies QAAC must be enabled in the MeGUI settings. 
  Additionally for QAAC some files must be installed (https://sites.google.com/site/qaacpage)
- added better MP4 language support & several Apple devices tunings especially for chapters

Enhanced OneClick encoder:
- Blu-ray processing (Folder + Playlist)
- DVD folder + file processing (including PGC support). Feature request #2817190
- folder as input supported. Feature request #3429875/#2773587
- support multiple input files per drag & drop
- new subtitle control (including delay, language, name, forced/default flag). Feature request #2752988
- subtitle support for MP4, AVI and M2TS output container
- enhanced audio control (added delay, language, name)
- AVS files as video input supported. Feature request #3412229
- embedded VOB subtitle support (IFO must be available)
- every OneClick job will be stored in a unique working directory. Feature request #2798486
- option to select default audio/subtitle languages
- option to select different default audio settings for different languages
- option to select default working and output directory
- option to specify the indexer priority and added AviSource() as way to process AVI files
- options to define the project name settings
- the x264 target playback device settings will be used for resizing
- input DAR detection moved from postprocessing to initial opening step
- convert TrueHD and DTS-HD tracks with eac3to when the track should be encoded

Enhancements/Fixes:
[DGIndexNV] enhanced progress information (requires dgindexnv 2043+)
[DGIndexNV] added support for MP4 container (requires dgindexnv 2044+)